--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -29,6 +29,11 @@ http {
   gzip_disable "MSIE [1-6]\.(?!.*SV1)";
   <% end %>
 
+  <% if scope.lookupvar('nginx::params::nx_pagespeed') == 'on' %> 
+  pagespeed on;
+  pagespeed FileCachePath <%= scope.lookupvar('nginx::params::nx_pagespeed')%>;
+  <% end %>
+
   include /etc/nginx/conf.d/*.conf;
 }
 <% if scope.lookupvar('nginx::mail') %>
