--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -6,3 +6,8 @@ server {
   <% end %>
   server_name           <%= rewrite_www_to_non_www ? name.gsub(/^www\./, '') : server_name.join(" ") %>;
   access_log            <%= scope.lookupvar('nginx::params::nx_logdir')%>/<%= name %>.access.log;
+
+  <% if scope.lookupvar('nginx::params::nx_pagespeed') == 'on' %>
+  pagespeed EnableFilters combine_css;
+  pagespeed EnableFilters combine_javascript;
+  <% end %>
