Fix typo in pagespeed cache path variable

--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -38,7 +38,7 @@ http {
 
   <% if scope.lookupvar('nginx::params::nx_pagespeed') == 'on' %> 
   pagespeed on;
-  pagespeed FileCachePath <%= scope.lookupvar('nginx::params::nx_pagespeed')%>;
+  pagespeed FileCachePath <%= scope.lookupvar('nginx::params::nx_pagespeed_cache')%>;
   <% end %>
 
   include /etc/nginx/conf.d/*.conf;
