Change default filter

--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -23,7 +23,16 @@ server {
   <% end %>
 
   <% if scope.lookupvar('nginx::params::nx_pagespeed') == 'on' %>
-  pagespeed EnableFilters combine_css;
-  pagespeed EnableFilters combine_javascript;
+  # Filter settings
+  pagespeed RewriteLevel CoreFilters;
+  pagespeed EnableFilters collapse_whitespace,remove_comments;
+ 
+  #  Ensure requests for pagespeed optimized resources go to the pagespeed
+  #  handler and no extraneous headers get set.
+  location ~ "\.pagespeed\.([a-z]\.)?[a-z]{2}\.[^.]{10}\.[^.]+" { add_header "" ""; }
+  location ~ "^/ngx_pagespeed_static/" { }
+  location ~ "^/ngx_pagespeed_beacon$" { }
+  location /ngx_pagespeed_statistics { allow 127.0.0.1; deny all; }
+  location /ngx_pagespeed_message { allow 127.0.0.1; deny all; }
   <% end %>
 
