Change to use location_cfg_custom

--- a/templates/vhost/vhost_footer.erb
+++ b/templates/vhost/vhost_footer.erb
@@ -5,6 +5,9 @@ include <%= file %>;
   <%= key %> <%= value %>;
 <% end -%>
 <% end -%>
+<% if @vhost_cfg_custom -%>
+  <%= vhost_cfg_custom %>
+<% end -%>
 }
 <% if @rewrite_www_to_non_www -%>
 server {
