--- a/templates/vhost/vhost_location_directory.erb
+++ b/templates/vhost/vhost_location_directory.erb
@@ -20,7 +20,7 @@
 <% if @location_cfg_append -%><% @location_cfg_append.sort_by {|k,v| k}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
-<% if defined? @additional -%>
-    <%= additional %>
+<% if defined? @location_cfg_custom-%>
+    <%= location_cfg_custom %>
 <% end -%>
   }
