--- a/templates/vhost/vhost_location_empty.erb
+++ b/templates/vhost/vhost_location_empty.erb
@@ -2,4 +2,7 @@
 <% if @location_custom_cfg -%><% @location_custom_cfg.sort_by {|k,v| k}.each do |key,value| -%>
     <%= key %> <%= value %>;
 <% end -%><% end -%>
+<% if defined? @location_cfg_custom-%>
+    <%= location_cfg_custom %>
+<% end -%>
   }
