--- a/templates/vhost/vhost_header.erb
+++ b/templates/vhost/vhost_header.erb
@@ -22,7 +22,7 @@ server {
   }
 <% end %>
 
-<% if scope.lookupvar('nginx::params::nx_pagespeed') == 'on' %>
+<% if $pagespeed == 'on' %>
   # Filter settings
   pagespeed RewriteLevel CoreFilters;
   pagespeed EnableFilters collapse_whitespace,remove_comments;
